# erpnext-custom-apps

./: .gitignore  README.md  RECOVERY.md  RESTORE_PLAN.txt  docker-compose.yml  install_apps.sh  post-restart.sh  restore.sh  setup.sh
apps/ai_comms_hub/: ARCHITECTURE.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml
apps/ai_comms_hub/ai_comms_hub/: __init__.py  hooks.py  import_qa_pairs.py  import_qdrant.py  modules.txt  test_ai_full.py  update_faq.py
apps/ops_ziflow/: LICENSE  MANIFEST.in  README.md  add_field.py  pyproject.toml  setup_dashboard.py  setup_lead_dashboard.py  ziflow_backfill.py
apps/ops_ziflow/docs/: PRODUCT_ATTRIBUTE_MIGRATION_REPORT.md
apps/ops_ziflow/frontend/: components.d.ts  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/ops_ziflow/ops_ziflow/: add_cards_to_workspace.py  add_existing_cards.py  add_quote_card.py  add_quote_cards_to_workspace.py  add_quote_shortcut.py  add_quote_to_dashboard.py  backfill_preview_urls.py  check_and_add_fields.py  check_api_fields.py  check_doctypes.py  check_duplicates.py  check_errors.py  check_features.py  check_home.py  check_new_fields.py  check_ops_quotes.py  check_order_product.py  check_quote_sync_status.py  commands.py  compare_duplicates.py  copy_ops_to_home.py  create_lead_cards.py  create_margin_visualizer_final.py  create_margin_visualizer_fixed.py  create_margin_visualizer_script.py  create_margin_visualizer_v2.py  create_margin_visualizer_v3.py  create_margin_visualizer_v4.py  create_ops_quote_cards.py  create_quote_cards.py  create_quote_charts.py  debug_charts.py  (+31 more)
(+502 files in other folders)
