[project]
name = "ai_comms_hub"
version = "0.0.1"
description = "AI-First Communications Hub - Omnichannel customer conversations with AI automation"
authors = [
    { name = "VisualGraphX", email = "dev@visualgraphx.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "requests>=2.28.0",
    "twilio>=8.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[project.entry-points."frappe"]
ai_comms_hub = "ai_comms_hub"
