[project]
name = "ops_ziflow"
version = "0.1.0"
description = "ZiFlow proofing integration for OPS on Frappe/ERPNext"
authors = [
    { name = "VisualGraphX", email = "dev@visualgraphx.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "frappe>=15.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[project.entry-points."frappe"]
ops_ziflow = "ops_ziflow"
